<resources>
    <string name="app_name">Desafio Android</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name_repository">Nome Repositório</string>
    <string name="description">Descrição</string>
    <string name="fork">fork</string>
    <string name="star">star</string>
    <string name="user_name">Nome de usuário</string>
    <string name="pull_tittle">Título PullRequest</string>
    <string name="body">corpo</string>
    <string name="date">data</string>
    <string name="owner">eduardotercio</string>
    <string name="not_found_pull_request">Este repositório não possui pull request</string>
    <string name="not_found_repository">Nenhum repositório encontrado</string>
    <string name="internet_error">Sem conexão com a Internet</string>
    <string name="error">Um erro ocorreu</string>
    <string name="empty">Vazio</string>

</resources>