<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_name_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="8dp"
            android:text="@string/name_repository"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/text_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@id/text_fork"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_fork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/fork"
            android:fontFamily="sans-serif-black"
            android:text="@string/fork"
            android:textColor="#DCCF59"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_star_24"
            android:fontFamily="sans-serif-black"
            android:text="@string/star"
            android:textColor="#DCCF59"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_fork" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@id/text_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/perfil" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/user_name"
            android:textColor="#5977E3"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image_avatar"
            app:layout_constraintTop_toBottomOf="@id/image_avatar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>