<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/darker_gray"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_titulo_pull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/pull_tittle"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/text_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_body"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/body"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/image_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_titulo_pull" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_avatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginTop="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/perfil" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/user_name"
            android:textColor="#5977E3"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/image_avatar"
            app:layout_constraintStart_toEndOf="@+id/image_avatar"
            app:layout_constraintTop_toTopOf="@id/image_avatar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_avatar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>